--- a/templates/index.html
+++ b/templates/index.html
@@ -92,15 +92,19 @@
     
     <section id="about" class="section about-section">
         <div class="section-title"> • 關於科技系</div>
-                <div class="transport-container">
-                <div class="transport-text">
-                    <p><strong>文字</strong><br>
+                <div class="about-container">
+                <div class="about-text">
+                    <p>
                         好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂
                         字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多
                         ⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好
                         多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字
-                        好多⽂字
-                        好多⽂字好多⽂</p>
+                        好多⽂字<br><br>
+                        好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂
+                        字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多
+                        ⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好
+                        多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字好多⽂字
+                        好多⽂字</p>
         
             </div>
         </section>
