--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                 <img src="{{ url_for('static', filename='fb.png') }}" alt="Facebook" class="fb-icon">
             </a>
             <a href="https://www.instagram.com/你的IG連結" target="_blank">
-                <img src="{{ url_for('static', filename='ig.png') }}" alt="Instagram" class="ig-icon">
+                <img src="{{ url_for('static', filename='IG.png') }}" alt="Instagram" class="ig-icon">
             </a>
         </div>
     
