--- a/templates/index.html
+++ b/templates/index.html
@@ -148,6 +148,18 @@
           </div>
           <button class="carousel-btn right" onclick="scrollCarousel(1)">→</button>
         </div>
+        <div class="manufacturer-logo">LOGO</div>
+        <div class="manufacturer-footer-text">
+            <p>2025 國立臺灣師範大學 科技應用與人力資源發展學系<br>115級畢業專題成果網站</p>
+        </div>
+        <div class="social-buttons">
+            <a href="https://www.facebook.com/你的FB連結" target="_blank">
+                <img src="{{ url_for('static', filename='fb.png') }}" alt="Facebook" class="manufacturer-fb-icon">
+            </a>
+            <a href="https://www.instagram.com/你的IG連結" target="_blank">
+                <img src="{{ url_for('static', filename='IG.png') }}" alt="Instagram" class="manufacturer-ig-icon">
+            </a>
+        </div>
       </section>
       
 
