--- a/templates/index.html
+++ b/templates/index.html
@@ -135,7 +135,7 @@
         </div>
     </section>
     <section id="manufacturer" class="section manufacturer-section"data-nav-color="#cde1ea">
-        <div class="section-title"> • 贊助廠商</div>
+        <!--<div class="section-title"> • 贊助廠商</div>-->
         <div class="carousel-wrapper">
           <button class="carousel-btn left" onclick="scrollCarousel(-1)">←</button>
           <div class="carousel" id="sponsorCarousel">
