--- a/templates/index.html
+++ b/templates/index.html
@@ -331,7 +331,15 @@
                 <div class="map-hologram">
                     <div class="hologram-scan"></div>
                 </div>
-                <img src="{{ url_for('static', filename='map.png') }}" alt="交通地圖" class="map-image">
+                <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.086554832924!2d121.52838961500542!3d25.02519228396908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abc770759f4b%3A0x4bc09e59c8db58f8!2z5ZyL56uL5p2x5Y2A5aSn6Ziq5qWt5bGx5Y2A!5e0!3m2!1szh-TW!2stw!4v1710000000000!5m2!1szh-TW!2stw"
+                width="100%"
+                height="400"
+                style="border:0; border-radius: 16px;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
                 <div class="map-decoration"></div>
                 <div class="map-pins">
                     <div class="map-pin pin-1">
