--- a/project_web-main/templates/index.html
+++ b/project_web-main/templates/index.html
@@ -95,7 +95,7 @@
                 </a>
             </div>
             
-            <div class="social-buttons">
+            <div class="home-social-buttons">
                 <a href="https://www.facebook.com/你的FB連結" target="_blank" class="social-btn">
                     <i class="fab fa-facebook-f"></i>
                 </a>
